      for UI display. (#49)
    - Fixed some instances of "Select new contents" for blueprints.
      Note: You can only use select new contents when the blueprint is in the players inventory.
            If the blueprint is in the blueprint library when you "Select new contents" the
            blueprint will be broken.  See: https://forums.factorio.com/viewtopic.php?f=182&t=88100
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 2023-06-23
  Bugfixes:
    - Just for fun I had to leave a crash bug in there.  Fixed crash when placing true ghosts
      (Nothing in inventory)
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2023-06-23
  Info:
    - ***  There is significant rework done to the logic when placing combinators.  This is
      ***  based on much of the feedback I received after the 2.0 release.  I believe things
      ***  Will be more sane, and more intuitive.  As always, please let me know if things
      ***  need additional adjustments.  I hope I was able to test enough scenarios to cover
      ***  possible pit-falls.  I'm sure some corner cases still exist.  See below for
      ***  Changes.
      ***
      ***  Please back-up your save game and check your combinators before saving over an
      ***  active save game.
  Bugfixes:
    - Several spelling errors corrected in English locale
    - Fix not disabling signal edit controls when modifying stop type creating an opportunity
      to crash when later clicking the confirm button without an active slot (#42, #43)
    - Fix crash when switching entities while LTN Combinator is opening in map view and latency
      to the game server exists.
  Changes:
    - Will not remove signals when converting to depot by default.  Hold Shift when clicking depot
      checkbox to remove Requester/Provider related signals